# pipelantic

./: .gitignore  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  MAINTAINERS.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  mkdocs.yml  pyproject.toml
.cursor/rules/: etlantic.mdc
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: checks.yml  ci.yml  release.yml
benchmarks/: dataframe_scale.py
docs/: ETLANTIC_MANIFESTO.md  PIPELINEMODEL_MANIFESTO.md  README.md
docs/01_GETTING_STARTED/: BEST_PRACTICES.md  CAPABILITIES.md  COMPARE.md  COOKBOOK.md  CURRENT_VERSION.md  ENGINE_SELECTION.md  EVALUATOR.md  FAQ.md  FIRST_PIPELINE.md  INSTALLATION.md  INTERCHANGE_GATE_A_FAQ.md  OPS_EXAMPLES.md  PORTABLE_FAILURE_COOKBOOK.md  PORTABLE_VS_NATIVE.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  TROUBLESHOOTING.md  UPGRADE.md  WHATS_NEW_0_15.md  WHATS_NEW_0_17.md  WHATS_NEW_0_18.md  WHATS_NEW_0_19.md  WHATS_NEW_0_20.md  prod.example.json
docs/02_FOUNDATIONS/: ARCHITECTURE.md  CORE_CONCEPTS.md  DESIGN_PRINCIPLES.md  DOCUMENTATION_STATUS.md  FASTAPI_PHILOSOPHY.md  GLOSSARY.md  README.md  SECURITY.md  VISION.md  WHY_ETLANTIC.md
docs/03_DATA_CONTRACTS/: DATACONTRACTMODEL.md  GENERATION.md  LOADING.md  ODCS.md  PYDANTIC_INTEGRATION.md  README.md  VALIDATION.md  VERSIONING.md
docs/04_TRANSFORMATIONS/: ASYNC.md  CALLBACKS.md  DTCS.md  ERROR_HANDLING.md  IMPLEMENTATIONS.md  INPUTS.md  OUTPUTS.md  PARAMETERS.md  PORTABLE_FUNCTIONS.md  PORTABLE_TRANSFORMATIONS.md  README.md  TRANSFORMATION.md  TYPE_ANNOTATIONS.md
docs/05_PIPELINES/: CONTRACT_GENERATION.md  CONTRACT_LOADING.md  DPCS.md  PIPELINE.md  PIPELINE_VALIDATION.md  PLANNING.md  PROFILES.md  PROFILE_PRIMER.md  README.md  SINKS.md  SOURCES.md  STEPS.md  SUBPIPELINES.md
docs/06_EXECUTION/: AIRFLOW.md  AIRFLOW_TUTORIAL.md  CI_INTEGRATION.md  COMPILATION.md  DATAFRAME_PLUGINS.md  DEPLOYMENT.md  DURABLE_REPORTS.md  EXECUTION_MODEL.md  FILE_STORAGE_TUTORIAL.md  LIFECYCLE_EXTENSIONS.md  LOCAL_PYTHON.md  LOGGING.md  OBSERVABILITY_TODAY.md  OPS_PILOT.md  ORCHESTRATION_PLUGINS.md  PANDAS.md  PANDAS_TUTORIAL.md  PILOT_WALKTHROUGH.md  PLUGINS.md  POLARS.md  POLARS_TUTORIAL.md  PRODUCTION_PROFILES.md  PRODUCTION_READINESS.md  PYSPARK.md  PYSPARK_EXECUTION.md  PYSPARK_TUTORIAL.md  README.md  RESOURCE_PLUGINS.md  RUN_REPORTS.md  SECRETS_MANAGEMENT.md  SPARK_OPTIMIZATION.md  SQL.md  SQL_EXECUTION.md  SQL_PUSHDOWN.md  SQL_TUTORIAL.md  STORAGE_PLUGINS.md  STORAGE_TODAY.md  STRUCTURED_STREAMING.md
docs/07_PLUGIN_SDK/: BUILDING_A_PLUGIN.md  DATAFRAME_PLUGIN.md  DISTRIBUTION.md  OBSERVABILITY_PROVIDER.md  ORCHESTRATOR_PLUGIN.md  OVERVIEW.md  PORTABLE_TRANSFORM_COMPILER.md  PYSPARK_PLUGIN.md  README.md  RESOURCE_PROVIDER.md  SECRET_PROVIDER.md  SPARK_PROVIDER.md  SQL_DIALECT.md  SQL_PLUGIN.md  STORAGE_PLUGIN.md  TESTING_PLUGINS.md  THIRD_PARTY_COMPILER_TUTORIAL.md
docs/08_VISUALIZATION/: DOCUMENTATION.md  GRAPHVIZ.md  HTML.md  LINEAGE.md  MERMAID.md  OPENAPI_FOR_PIPELINES.md  README.md
docs/09_EXAMPLES/: AIRFLOW_PIPELINE.md  ASYNC_PIPELINES.md  CALLBACKS.md  CODE_FIRST.md  CONTRACT_FIRST.md  CONTRACT_FIRST_TUTORIAL.md  CSV_TO_CSV.md  CSV_TO_SQL.md  END_TO_END.md  INTERCHANGE_POLARS_PANDAS.md  MULTI_OUTPUT.md  PANDAS_PIPELINE.md  POLARS_PIPELINE.md  PORTABLE_TRANSFORMATION.md  PORTABLE_TRANSFORMS.md  PREFECT_RUN.md  PYSPARK_TO_DELTA.md  PYSPARK_TO_SQL.md  README.md  SAMPLE_PROJECT.md  SPARKFORGE_ADAPTER.md  SQL_TO_PYSPARK.md  SQL_TO_SQL.md  STREAMING_PYSPARK.md
docs/10_REFERENCE/: API_PLAN_RUNTIME.md  API_REFERENCE.md  CLI.md  COMPATIBILITY.md  CONFIGURATION.md  CONFIGURATION_TODAY.md  DIAGNOSTICS.md  ENVIRONMENT_VARIABLES.md  EXCEPTIONS.md  KNOWN_ISSUES.md  OPTIONAL_PACKAGES.md  PORTABLE_COMPILER_MATRIX.md  README.md  RUNTIME_CONFIGURATION.md  SURFACE_INVENTORY.md
docs/11_DEVELOPMENT/: ARCHITECTURE_DECISIONS.md  BENCHMARKS.md  CODE_OF_CONDUCT.md  CODING_STANDARDS.md  CONTRACTMODEL_UPGRADE_PLAN.md  CONTRIBUTING.md  DEPENDENCY_STRATEGY.md  DEPRECATION_POLICY.md  DESIGN_DECISIONS.md  DESIGN_PROPOSALS.md  DOCUMENTATION.md  DOCUMENTATION_AUDIT_0_17.md  DOCUMENTATION_AUDIT_0_18.md  DOCUMENTATION_AUDIT_0_20.md  DTCS_3_0_SPEC_PROPOSAL.md  DTCS_PORTABLE_EVOLUTION.md  DTCS_PORTABLE_SPEC_PROPOSAL.md  ETL_RELIABILITY_PLAN.md  EXIT_GATE_0_20.md  EXIT_GATE_0_21.md  FASTAPI_INTEGRATION_PLAN.md  GOVERNANCE.md  INTEROPERABILITY_FOUNDATION_PLAN.md  MIGRATION_0_11_TO_0_12.md  MIGRATION_0_15_TO_0_16.md  MIGRATION_0_16_TO_0_17.md  MIGRATION_0_17_TO_0_18.md  MIGRATION_0_18_TO_0_19.md  MIGRATION_0_19_TO_0_20.md  MIGRATION_0_4_TO_0_5.md  MIGRATION_0_5_TO_0_6.md  MIGRATION_0_6_TO_0_7.md  MIGRATION_0_8_TO_0_9.md  MIGRATION_0_9_TO_0_10.md  PERFORMANCE.md  PERFORMANCE_RESULTS.md  PORTABLE_TRANSFORM_PLAN.md  PREFECT_SPIKE_NOTES.md  README.md  RELEASE_PROCESS.md  (+9 more)
docs/specifications/: DTCS.md  DTCS_SPEC.md  PORTABLE_TRANSFORM_IR_SPEC.md  README.md
docs/theme/: README.md
examples/: README.md  dataframe_parity.py  file_storage.py  interchange_polars_pandas.py  portable_pandas_kernel.py  portable_polars_kernel.py  pyspark_local.py  quickstart.py  sql_boundary_hybrid.py  sql_failure_recovery.py  sql_to_sql.py  sql_transactional_write.py
profiles/: prod.example.json
scripts/: build_docs.py  check_agent_guidance.py  check_docs.py  check_release.py  check_runnable_docs.py  check_surface_inventory.py  check_transform_compiler_drift.py  generate_diagnostics_catalog.py  test_core.sh
src/etlantic/: __init__.py  agents.py  bindings.py  capabilities.py  capability_probe.py  contracts.py  exceptions.py  extensions.py  identity.py  inspection.py  io_policy.py  mermaid.py  notebook.py  observability.py  outbound.py  pipeline.py  plugin_lifecycle.py  plugin_manifest.py  plugin_trust.py  policy.py  ports.py  profile.py  project.py  refs.py  registry.py  reliability.py  reliability_providers.py  reliability_runtime.py  schema_drift.py  schema_history.py  schema_policy.py  viz.py  (+4 more)
tests/: conftest.py  test_examples.py
(+283 files in other folders)
