[project]
name = "pipelantic"
version = "0.5.0"
description = "Typed, contract-driven data pipeline modeling for Python."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Odo Matthews", email = "odosmatthews@gmail.com" }]
keywords = ["pipelines", "etl", "data-contracts", "typed", "pydantic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "contractmodel>=0.1.2",
    "pydantic>=2.12,<3",
    "packaging>=24",
    "dtcs>=0.11,<1",
    "dpcs>=0.13,<1",
    "typer>=0.15,<1",
    "click>=8,<9",
    "anyio>=4,<5",
]

[project.optional-dependencies]
polars = ["pipelantic-polars==0.5.0"]
pandas = ["pipelantic-pandas==0.5.0"]
arrow = ["pyarrow>=14"]
dataframes = [
    "pipelantic-polars==0.5.0",
    "pipelantic-pandas==0.5.0",
]

[project.scripts]
pipelantic = "pipelantic.cli:run"

[project.urls]
Homepage = "https://github.com/eddiethedean/pipelantic"
Documentation = "https://github.com/eddiethedean/pipelantic/tree/main/docs"
Repository = "https://github.com/eddiethedean/pipelantic"
Issues = "https://github.com/eddiethedean/pipelantic/issues"
Changelog = "https://github.com/eddiethedean/pipelantic/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "mkdocs>=1.6,<2",
    "mkdocs-material>=9.6,<10",
    "mkdocstrings[python]>=0.29,<1",
    "pymdown-extensions>=10.14,<11",
    "pytest>=8,<9",
    "ruff>=0.9,<1",
]
dataframes = [
    "pipelantic-polars",
    "pipelantic-pandas",
    "pyarrow>=14",
]
polars = [
    "pipelantic-polars",
    "pyarrow>=14",
]
pandas = [
    "pipelantic-pandas",
    "pyarrow>=14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pipelantic"]

[tool.hatch.build.targets.sdist]
include = [
    "/src/pipelantic",
    "/packages",
    "/tests",
    "/examples",
    "/README.md",
    "/LICENSE",
    "/CHANGELOG.md",
    "/SECURITY.md",
    "/pyproject.toml",
]

[tool.uv]
package = true
default-groups = ["dev"]

[tool.uv.workspace]
members = [
    ".",
    "packages/pipelantic-polars",
    "packages/pipelantic-pandas",
]

[tool.uv.sources]
pipelantic = { workspace = true }
pipelantic-polars = { workspace = true }
pipelantic-pandas = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [
    "src",
    "packages/pipelantic-polars/src",
    "packages/pipelantic-pandas/src",
]
markers = [
    "polars: tests requiring the Polars plugin",
    "pandas: tests requiring the Pandas plugin",
]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src", "tests", "packages"]
exclude = [
    ".git",
    ".venv",
    ".ruff_cache",
    ".pytest_cache",
    "dist",
    "build",
]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "UP",
    "B",
    "SIM",
    "RUF",
]
ignore = [
    "E501",
]

[tool.ruff.lint.isort]
known-first-party = ["pipelantic", "pipelantic_polars", "pipelantic_pandas"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
