[project]
name = "etlantic"
version = "0.6.1"
description = "Typed, contract-driven data pipeline modeling for Python."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Odo Matthews", email = "odosmatthews@gmail.com" }]
keywords = ["pipelines", "etl", "data-contracts", "typed", "pydantic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "contractmodel>=0.1.2",
    "pydantic>=2.12,<3",
    "packaging>=24",
    "dtcs>=0.11,<1",
    "dpcs>=0.13,<1",
    "typer>=0.15,<1",
    "click>=8,<9",
    "anyio>=4,<5",
]

[project.optional-dependencies]
polars = ["etlantic-polars==0.6.1"]
pandas = ["etlantic-pandas==0.6.1"]
sql = ["etlantic-sql==0.6.1"]
postgresql = ["etlantic-sql==0.6.1"]
arrow = ["pyarrow>=14"]
dataframes = [
    "etlantic-polars==0.6.1",
    "etlantic-pandas==0.6.1",
]

[project.scripts]
etlantic = "etlantic.cli:run"

[project.urls]
Homepage = "https://github.com/eddiethedean/etlantic"
Documentation = "https://github.com/eddiethedean/etlantic/tree/main/docs"
Repository = "https://github.com/eddiethedean/etlantic"
Issues = "https://github.com/eddiethedean/etlantic/issues"
Changelog = "https://github.com/eddiethedean/etlantic/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "mkdocs>=1.6,<2",
    "mkdocs-material>=9.6,<10",
    "mkdocstrings[python]>=0.29,<1",
    "pymdown-extensions>=10.14,<11",
    "pytest>=8,<9",
    "ruff>=0.9,<1",
]
dataframes = [
    "etlantic-polars",
    "etlantic-pandas",
    "pyarrow>=14",
]
polars = [
    "etlantic-polars",
    "pyarrow>=14",
]
pandas = [
    "etlantic-pandas",
    "pyarrow>=14",
]
sql = [
    "etlantic-sql",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/etlantic"]

[tool.hatch.build.targets.sdist]
include = [
    "/src/etlantic",
    "/packages",
    "/tests",
    "/examples",
    "/README.md",
    "/LICENSE",
    "/CHANGELOG.md",
    "/SECURITY.md",
    "/pyproject.toml",
]

[tool.uv]
package = true
default-groups = ["dev"]

[tool.uv.workspace]
members = [
    ".",
    "packages/etlantic-polars",
    "packages/etlantic-pandas",
    "packages/etlantic-sql",
]

[tool.uv.sources]
etlantic = { workspace = true }
etlantic-polars = { workspace = true }
etlantic-pandas = { workspace = true }
etlantic-sql = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [
    "src",
    "packages/etlantic-polars/src",
    "packages/etlantic-pandas/src",
    "packages/etlantic-sql/src",
]
markers = [
    "polars: tests requiring the Polars plugin",
    "pandas: tests requiring the Pandas plugin",
    "sql: tests requiring the SQL plugin",
]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src", "tests", "packages"]
exclude = [
    ".git",
    ".venv",
    ".ruff_cache",
    ".pytest_cache",
    "dist",
    "build",
]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "UP",
    "B",
    "SIM",
    "RUF",
]
ignore = [
    "E501",
]

[tool.ruff.lint.isort]
known-first-party = [
    "etlantic",
    "etlantic_polars",
    "etlantic_pandas",
    "etlantic_sql",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
